# DeepSeek-TUI

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  main.rs  theme.rs
crates/hooks/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: client.rs  config.rs  cycle_manager.rs  deepseek_theme.rs  lib.rs  localization.rs  main.rs  palette.rs  prompts.rs  runtime_api.rs  settings.rs
crates/tui/src/client/: chat.rs  responses.rs
crates/tui/src/commands/: attachment.rs  config.rs  core.rs  debug.rs  init.rs  mod.rs  note.rs  provider.rs  queue.rs  review.rs  session.rs  skills.rs  task.rs
crates/tui/src/core/: capacity.rs  engine.rs
crates/tui/src/prompts/: agent.txt  base.txt  normal.txt  plan.txt  yolo.txt
crates/tui/src/tools/: mod.rs  registry.rs  rlm_query.rs  swarm.rs  web_run.rs
crates/tui/src/tools/subagent/: mod.rs
crates/tui/src/tui/: active_cell.rs  app.rs  file_mention.rs  file_tree.rs  history.rs  keybindings.rs  markdown_render.rs  mod.rs  model_picker.rs  slash_menu.rs  ui.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: mod.rs
crates/tui/src/tui/widgets/: footer.rs  mod.rs
docs/: KEYBINDINGS.md
npm/deepseek-tui/: package.json
