[package]
name = "deepseek-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native GUI for DeepSeek TUI"

[lib]
name = "deepseek_gui"
path = "src/lib.rs"

[[bin]]
name = "deepseek-gui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.30"
rfd = "0.15"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Reuse the TUI crate's core logic, models, config, and engine.
deepseek-tui = { path = "../tui" }
